Update users and books
