# middleware/validate.js
@@ -21,7 +21,28 @@ const saveUser = (req,res,next) => {
     });
 };
 
-const saveReporter = (req,res,next) => {
+const saveBook = (req,res,next) => {
+    const validationRule = {
+        title: 'required|string',
+        authorId: 'required|email',
+        genre: 'required|email',
+        year: 'required|string',
+    };
+    validator(req.body,validationRule,{},(err,status) => {
+        if (!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+
+        } else {
+            next();
+        }
+    });
+};
+
+const saveAuthor = (req,res,next) => {
     const validationRule = {
         firstName: 'required|string',
         lastName: 'required|string',
@@ -42,5 +63,5 @@ const saveReporter = (req,res,next) => {
 
 module.exports = {
     saveUser,
-    saveReporter
+    saveAuthor
 };
