# models/index.js
@@ -6,7 +6,9 @@ mongoose.Promise = global.Promise;
 const db = {};
 db.mongoose = mongoose;
 db.url = dbConfig.url;
-db.users = require('./users.js')(mongoose);
-db.reporters = require('./reporters.js')(mongoose);
+//db.users = require('./users.js')(mongoose);
+db.books = require('./books.js')(mongoose);
+//db.reporters = require('./reporters.js')(mongoose);
+db.authors = require('./authors.js')(mongoose);
 
 module.exports = db;
